# remote_research_mcp

./: .env  commands.txt  mcp_chabot_trp.py  mcp_openai_chatbot.py  pyproject.toml  requirements.txt  research.txt  research_server.py  runtime.txt
papers/agentic_knowledge_graph_construction/: papers_info.json
papers/chemisry/: papers_info.json
papers/global_warming/: papers_info.json
papers/love/: papers_info.json
papers/mathematics/: papers_info.json
papers/synthetic_data_generation/: papers_info.json
papers/water/: papers_info.json
